# dfr

./: .env.sample  Dockerfile  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  models.py  serializers.py  services.py  task.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_course_photo_lesson.py  0003_course_owner_lesson_owner.py  0003_lesson_likes.py  0004_alter_course_owner_alter_lesson_owner.py  0005_subscription.py  0006_course_price_payment.py
materials/: models.py
materials/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: payments.json
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_remove_user_tgnick_user_city.py  0004_payment.py  0005_donat.py  0006_user_tg_chat_id.py
vehicle/: models.py  serializers.py  serliazers.py  urls.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_car_amount.py
